# llmoxie

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pixi.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/demo/: Dockerfile  devcontainer.json  onCreate.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  TESTCONTAINERS_GUIDE.md  build-demo-devcontainer.yml  build-services.yml  ci.yml  e2e.yml  proxy-container.yml
agent_docs/: adding_endpoints.md  code_conventions.md  commit_messages.md  infrastructure.md  troubleshooting.md
app/services/: retrieval_service.py
archive/infra/: README.md  __main__.py  users.py
archive/legacy/: download_models.py  rubin-app-gpu.py  rubin-panel-app.py  vector_store.py
archive/proxy/: .dockerignore  .env.example  .gitignore  AUTHENTICATION.md  CONTAINER.md  Dockerfile  README.md  auth.py  data_log.py  main.py  requirements.txt  test.py
core/generator/: language_model.py
data/: analysis.ipynb  reader.py
demo/: 01_cli_demo.md  02_services_demo.md  03_infra_demo.md  04_rse_plugins_demo.md  05_logging_demo.md  README.md
docker/: .env.example  README.md  config.yaml  create_service_dbs.sql  docker-compose.yml
docker/dockerfiles/: backup.dockerfile  litellm.dockerfile  mlflow.dockerfile
docs/development-history/agentic-rag/: 20251230_AGENTIC_RAG_IMPLEMENTATION_PLAN.md  20251230_AGENTIC_RAG_PRD.md  20251230_PHASE1_PROGRESS.md  20251230_PHASE2_PROGRESS.md  20260102_PHASE3_PROGRESS.md  20260102_PHASE4_5_PROGRESS.md  20260102_PHASE4_PROGRESS.md
eval/RAG_eval/: README.md  cosine-similarity_eval.ipynb  deepEval_eval.ipynb  trulens_eval.ipynb
eval/RAG_eval/data/results/: cosine_similarity_results_2025-03-15_22-29-45.csv  trulens_results_2025-03-15_21-55-15.csv
eval/data_extraction/: README.md  scrape_lsst.py
infra/: Pulumi.yaml  README.md  users.py
infra-hf/: Pulumi.hf-prod.yaml  Pulumi.yaml  __main__.py
legacy/: rubin-app-gpu.py  rubin-panel-app.py
proxy/: AUTHENTICATION.md  CONTAINER.md  data_log.py  main.py
scripts/: backup_postgres.py  backup_postgres_dev.sh  testing.md
src/llmaven/: __init__.py  cli.py  config.py  main.py
src/llmaven/agentic/: __init__.py  exceptions.py  settings.py
src/llmaven/agentic/agent/: __init__.py  models.py  rag_agent.py
src/llmaven/agentic/ingestion/: __init__.py  pipeline.py
src/llmaven/agentic/mcp/: __init__.py  __main__.py  config.py  lifespan.py  server.py  test_search_tool.py  test_server_integration.py
src/llmaven/agentic/providers/: __init__.py  factory.py
src/llmaven/agentic/search/: __init__.py  hybrid_searcher.py  (+1 more)
src/llmaven/deployment/: __init__.py  backup_deploy.py  deploy.py  deploy_backup.py  init.py  loadtest.py  validate.py
src/llmaven/frontend/: __init__.py  app.py  config.py
src/llmaven/infrastructure/: __init__.py  main.py
src/llmaven/infrastructure_backup/: README.md  __init__.py  main.py
src/llmaven/proxy/: adl_logger.py
src/llmaven/schemas/: generate.py  retrieve.py
src/llmaven/services/: generation_service.py  retrieval_service.py
src/llmaven/v1/: router.py
tests/: conftest.py  debug_language_model.py  test_generator.py  test_retriever.py
tests/agentic/: __init__.py  conftest.py  test_cli.py  test_exceptions.py  test_hybrid_searcher.py  test_ingestion_pipeline.py  test_providers.py  test_qdrant_manager.py  test_rag_agent.py  test_settings.py
tests/agentic/mcp/: __init__.py
tests/infrastructure/: __init__.py  test_cli_env_file_validation.py  test_cli_extract.py  test_config_loader.py  test_cost_estimate.py  test_loadtest.py  test_schema_defaults.py  test_smoke_adl_logger.py
tests/infrastructure/extract/: __init__.py  test_cli.py  test_db.py  test_unit.py
tests/v1/: __init__.py  test_agentic_endpoints.py
(+39 files in other folders)
