[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmaven"
description = "REST API for LLMaven project"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "SSEC Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.30.0,<1",
    "httpx>=0.27.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "streamlit>=1.40.0",
    "langchain~=0.3.26",
    "langchain-community~=0.3.26",
    "langchain-qdrant>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "qdrant-client>=1.11.2,<1.12",
    "sentence-transformers>=3.1.0,<3.2",
    "nltk>=3.9.1,<3.10",
    "arxiv>=2.1.3,<2.2",
    "pymupdf>=1.24.10,<1.25",
    "transformers~=4.53.0",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.42.0,<0.46",
]

[project.optional-dependencies]
production = [
    "gunicorn>=21.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
llmaven = "llmaven.cli:main"


[project.urls]
Homepage = "https://github.com/uw-ssec/llmaven"
Repository = "https://github.com/uw-ssec/llmaven.git"
Issues = "https://github.com/uw-ssec/llmaven/issues"

[tool.hatch.version]
path = "src/llmaven/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]